Added demo applet to documentation

--- a/CalcApplet.html
+++ b/CalcApplet.html
@@ -2,11 +2,10 @@
   <head>
       <title>Calc demo</title>
   </head>
-  <body>
-      <h1>Calc demo</h1>
-      <hr>
+  <body bgcolor="#808080">
+      <center>
       <applet archive="CalcApplet.jar" code="ral/CalcApplet.class"
-      width=130 height=150>
+      width=130 height=220>
         <param name="microedition.platform" value="T610">
       </applet>
   </body>
