--- a/CalcApplet.html
+++ b/CalcApplet.html
@@ -1,13 +1,29 @@
 <html>
-  <head>
-      <title>Calc demo</title>
-  </head>
-  <body bgcolor="#808080">
-      <center>
-      <applet archive="CalcApplet.jar" code="ral/CalcApplet.class"
-      width=130 height=220>
-        <param name="microedition.platform" value="T610">
-      </applet>
-  </body>
+<head>
+  <title>Calc demo</title>
+</head>
+<body bgcolor="#808080">
+
+<center>
+<applet archive="CalcApplet.jar" code="ral/CalcApplet.class"
+ width=130 height=220>
+</applet>
+</center>
+
+<p>
+This demo applet can be operated entirely by mouse, clicking on
+different areas of the "screen" activates the menu just as the
+joystick would. The "<-" button simulates the clear key, the "."
+button simulates the "*" key, and the "-/e" button simulates the "#"
+key.
+
+<p>
+The applet can also be operated entirely by the keyboard. Arrow keys
+work as joystick directions and "home" serves as the middle of the
+joystick. For ease of use, the "." key works the same as the "*" key,
+and "-" and "e" works the same as "#". "+", "ENTER" and the number
+keys correspond to the same keys on the phone.
+
+</body>
 </html>
 
