--- a/CalcApplet.html
+++ b/CalcApplet.html
@@ -11,18 +11,25 @@
 </center>
 
 <p>
-This demo applet can be operated entirely by mouse, clicking on
-different areas of the "screen" activates the menu just as the
-joystick would. The "<-" button simulates the clear key, the "."
-button simulates the "*" key, and the "-/e" button simulates the "#"
-key.
+This demo applet is an exact copy of the original MIDP application that runs
+on a mobile phone. The application should ideally work in the same way on your
+mobile phone as it does in this applet, except perhaps that the setup screen
+doesn't show up on all phones. Another exception is the entering of HEX
+numbers, which relies on key-repeat events, and I haven't been able to work
+this out in normal Java.
 
 <p>
-The applet can also be operated entirely by the keyboard. Arrow keys
-work as joystick directions and "home" serves as the middle of the
-joystick. For ease of use, the "." key works the same as the "*" key,
-and "-" and "e" works the same as "#". "+", "ENTER" and the number
-keys correspond to the same keys on the phone.
+The demo can be operated entirely by mouse, clicking on different areas of the
+"screen" activates the menu just as the joystick would. The "<-" button
+simulates the clear key, the "."  button simulates the "*" key, and the "-/e"
+button simulates the "#" key.
+
+<p>
+The applet can also be operated entirely by the keyboard. Arrow keys work as
+joystick directions and "home" serves as the middle of the joystick. For ease
+of use, the "." key works the same as the "*" key, and "-" and "e" works the
+same as "#". "+", "ENTER" and the number keys correspond to the same keys on
+the phone.
 
 </body>
 </html>
