Fixed HEX mode input for phones without keyRepeated events (and the CalcApplet)

--- a/CalcApplet.html
+++ b/CalcApplet.html
@@ -6,7 +6,7 @@
 
 <center>
 <applet archive="CalcApplet.jar" code="ral/CalcApplet.class"
- width=130 height=220 mayscript=true>
+ width=352 height=280 mayscript=true>
 </applet>
 </center>
 
@@ -15,8 +15,8 @@ This demo applet is an exact copy of the original MIDP application that runs
 on a mobile phone. The application should ideally work in the same way on your
 mobile phone as it does in this applet, except perhaps that the setup screen
 doesn't show up on all phones. Another exception is the entering of HEX
-numbers, which relies on key-repeat events, and I haven't been able to work
-this out in normal Java.
+numbers, which relies on key-repeat events, this works only when
+entering numbers by mouse-clicks, not by keyboard.
 
 <p>
 The demo can be operated entirely by mouse, clicking on different areas of the
