--- a/applet/CalcApplet.html
+++ b/applet/CalcApplet.html
@@ -5,7 +5,7 @@
 <body bgcolor="#808080">
 
 <center>
-<applet archive="CalcApplet.jar" code="ral/CalcApplet.class"
+<applet archive="CalcApplet.jar" code="midpcalc/CalcApplet.class"
  width=352 height=280 mayscript=true>
 </applet>
 </center>
